--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ body {
   width: 2.7rem;
 }
 
+.profile-photo.big {
+  width: 4.7rem;
+}
+
 img {
   display: block;
   width: 100%;
@@ -105,13 +109,13 @@ nav .container {
   justify-content: space-between;
 }
 
-nav .search-bar {
+.search-bar {
   background: var(--color-light);
   border-radius: var(--border-radius);
   padding: var(--search-padding);
 }
 
-nav .search-bar input[type='search'] {
+.search-bar input[type='search'] {
   background: transparent;
   width: 30vw;
   margin-left: 1rem;
@@ -119,7 +123,7 @@ nav .search-bar input[type='search'] {
   color: var(--color-dark);
 }
 
-nav .search-bar input[type='search']::placeholder {
+.search-bar input[type='search']::placeholder {
   color: var(--color-gray);
 }
 
@@ -157,6 +161,10 @@ main .container .left .profile {
   align-items: center;
   column-gap: 1rem;
   width: 100%;
+}
+
+main .container .left .handle {
+  margin-left: 3rem;
 }
 
 /* sidebar styles */
@@ -310,22 +318,22 @@ main .container .left .profile {
 }
 
 .middle .stories .story:nth-child(1) {
-  background: url('images/story-1.jpg') no-repeat center center/cover;
+  background: url('images/story\ \(1\)-min.jpg') no-repeat center center/cover;
 }
 .middle .stories .story:nth-child(2) {
-  background: url('images/story-2.jpg') no-repeat center center/cover;
+  background: url('images/story\ \(2\)-min.jpg') no-repeat center center/cover;
 }
 .middle .stories .story:nth-child(3) {
-  background: url('images/story-3.jpg') no-repeat center center/cover;
+  background: url('images/story\ \(3\)-min.jpg') no-repeat center center/cover;
 }
 .middle .stories .story:nth-child(4) {
-  background: url('images/story-4.jpg') no-repeat center center/cover;
+  background: url('images/story\ \(4\)-min.jpg') no-repeat center center/cover;
 }
 .middle .stories .story:nth-child(5) {
-  background: url('images/story-5.jpg') no-repeat center center/cover;
+  background: url('images/story\ \(5\)-min.jpg') no-repeat center center/cover;
 }
 .middle .stories .story:nth-child(6) {
-  background: url('images/story-6.jpg') no-repeat center center/cover;
+  background: url('images/story\ \(6\)-min.jpg') no-repeat center center/cover;
 }
 
 .middle .story .profile-photo {
@@ -353,4 +361,170 @@ main .container .left .profile {
   background: transparent;
   color: var(--color-dark);
   margin-right: 1rem;
+}
+
+/* feeds styles */
+.middle .feeds .feed {
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  margin: 1rem 0;
+  font-size: 0.85rem;
+  line-height: 1.5;
+}
+
+.middle .feed .head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.middle .feed .user {
+  display: flex;
+  gap: 1rem;
+}
+
+.middle .feed .photo {
+  border-radius: var(--card-border-radius);
+  overflow: hidden;
+  margin: 0.7rem 0;
+}
+
+.middle .feed .action-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
+  margin: 0.6rem;
+}
+
+.middle .liked-by {
+  display: flex;
+}
+
+.middle .liked-by span {
+  width: 1.4rem;
+  height: 1.4rem;
+  display: block;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid var(--color-white);
+  margin-left: -0.6rem;
+}
+
+.middle .liked-by span:first-child {
+  margin: 0;
+}
+
+/* right styles */
+main .container .right {
+  height: max-content;
+  position: sticky;
+  top: var(--sticky-top-right);
+  bottom: 0;
+}
+
+.right .messages {
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+}
+
+.right .messages .heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.right .messages i {
+  font-size: 1.4rem;
+}
+
+.right .messages .search-bar {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.right .messages .category {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.right .messages .category h6 {
+  width: 100%;
+  text-align: center;
+  border-bottom: 4px solid var(--color-light);
+  padding-bottom: 0.5rem;
+  font-size: 0.85rem;
+}
+
+.right .messages .category .active {
+  border-color: var(--color-dark);
+}
+
+.right .messages .message-requests {
+  color: var(--color-primary);
+}
+
+.right .messages .message {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  align-items: start;
+}
+
+.right .messages .profile-photo {
+  position: relative;
+  overflow: visible;
+}
+
+.right .profile-photo img {
+  border-radius: 50%;
+}
+
+.right .messages .message:last-child {
+  margin: 0;
+}
+
+.right .messages .message p {
+  font-size: 0.8rem;
+}
+.right .messages .message .profile-photo .active {
+  width: 0.8rem;
+  height: 0.8rem;
+  border-radius: 50%;
+  border: 3px solid var(--color-white);
+  background: var(--color-success);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+/* requests friend */
+.right .friend-requests {
+  margin-top: 1rem;
+}
+
+.right .friend-requests h4 {
+  color: var(--color-gray);
+  margin: 1rem 0;
+}
+
+.right .request {
+  background: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  margin-bottom: 0.7rem;
+}
+
+.right .request .info {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.right .request .action {
+  display: flex;
+  gap: 1rem;
 }
