try to fix imagine problems with responsive on phone

--- a/style.css
+++ b/style.css
@@ -770,3 +770,13 @@ main .container .right {
     flex-direction: column;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .logo {
+    display: none;
+  }
+
+  nav {
+    width: 100vw;
+  }
+}
