--- a/style.css
+++ b/style.css
@@ -721,6 +721,7 @@ main .container .right {
   }
 
   main .container {
+    display: block;
     grid-template-columns: 0 auto 5rem;
     gap: 0;
   }
@@ -745,10 +746,6 @@ main .container .right {
     display: block;
   }
 
-  main .container .middle {
-    grid-column: 1/3;
-  }
-
   main .container .right {
     display: none;
   }
@@ -765,5 +762,31 @@ main .container .right {
   .customize-theme .choose-bg {
     margin-top: 1rem;
     flex-direction: column;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .middle {
+    margin-right: 80px;
+  }
+
+  .middle .stories .story:nth-child(6) {
+    display: none;
+  }
+
+  .left .notifications-popup {
+    width: 20rem;
+    font-size: 70%;
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+
+  .left .notifications-popup::before {
+    display: none;
+  }
+
+  nav .container {
+    width: 50%;
   }
 }
